--- a/httpd.minimal.conf
+++ b/httpd.minimal.conf
@@ -1,9 +1,27 @@
+<IfModule !mpm_worker_module>
+LoadModule mpm_worker_module /usr/lib/apache2/modules/mod_mpm_worker.so
+</IfModule>
 LoadModule authn_file_module modules/mod_authn_file.so
 LoadModule authn_core_module modules/mod_authn_core.so
 LoadModule authz_core_module modules/mod_authz_core.so
+<IfModule !unixd_module>
 LoadModule unixd_module modules/mod_unixd.so
+</IfModule>
+<IfModule !log_config_module>
 LoadModule log_config_module modules/mod_log_config.so
+</IfModule>
 LoadModule wozozo_module ${PWD}/.libs/mod_wozozo.so
+
+<IfModule mpm_worker_module>
+    StartServers             2
+    MinSpareThreads          25
+    MaxSpareThreads          75
+    ThreadLimit              64
+    ThreadsPerChild          25
+    MaxRequestWorkers        150
+    MaxConnectionsPerChild   0
+</IfModule>
+
 
 Listen 8080
 DocumentRoot ${PWD}
